# Hack2Skill

./: app.py  pyproject.toml
legal_simplifier/: .env  main.py  requirements.txt
legal_simplifier/app/: config.py  models.py
legal_simplifier/app/api/v1/: chat.py  (+6 more)
legal_simplifier/app/services/: groq_service.py  llm_service.py  ocr_services.py  pdf_services.py  storage.py
legal_simplifier/ocr_results/: 2b8e2c93-e15e-4351-81df-0ca4a11f9013.txt  3bb1e078-c352-486b-8ef2-d373741a5316.txt  96d7008f-afe2-41e0-81fd-bb2721a9beba.txt  9f1532d6-9d42-404f-b314-bd8039b57d0d.txt  af0983bc-ecc6-460e-9c85-4aac7db53606.txt  f0f9ff73-533f-4676-8f4a-cc65d60c7864.txt
legal_simplifier/sessions/: 10cae5d5-0a04-467b-b28c-597d77a1670e.json  12a45f2f-ec1b-45ea-8601-2043595f00ce.json  688712a7-837d-4233-8efc-9c1e2c0c39e8.json  c5706bb6-6dad-4261-b69c-bc8c75aea122.json  d97a6314-9395-4634-864e-204710f80d87.json  d97a6314-9395-4634-864e-204710f80d87e.json
legal_simplifier/store/0ece2f48-9b5a-499c-956c-89cfcb71af17/: 7.txt
legal_simplifier/store/18611c93-e924-4c08-82b3-3b7f05cc56b1/: 10.txt  4.txt  8.txt
legal_simplifier/store/1b878b58-9a41-412b-97fb-3a88941e433c/: 3.txt  4.txt
legal_simplifier/store/23f49d2d-5425-4602-851f-595016118e89/: 5.txt
legal_simplifier/store/2b8e2c93-e15e-4351-81df-0ca4a11f9013/: 1.txt  2.txt  3.txt  6.txt  8.txt
legal_simplifier/store/3f0310c1-d926-48b8-b211-cf96c3108c26/: 2.txt  9.txt
legal_simplifier/store/425cd15a-0c43-4f4d-b710-0b327d093a66/: 9.txt
legal_simplifier/store/4eb0e9f9-ca72-4ae4-9511-90f1a27ade36/: 7.txt  9.txt
templates/: index.html
(+20 files in other folders)
