[project]
name = "hack2skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
