[project]
name = "hack2skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi==0.111.0",
    "flask>=3.1.2",
    "google-generativeai==0.7.2",
    "groq>=0.31.1",
    "load-dotenv>=0.1.0",
    "pdf2image==1.17.0",
    "pdfplumber>=0.11.7",
    "pillow==10.3.0",
    "pydantic==2.7.1",
    "pypdf2>=3.0.1",
    "pytesseract==0.3.10",
    "python-docx>=1.2.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "reportlab>=4.4.3",
    "uvicorn[standard]==0.29.0",
]
